Add Guestbook end 2 end devappserver test (still similar stack traces in logs for EE10 mode, filed 2 bugs there. But we will also test the de facto standard: guestbook